--- a/style.css
+++ b/style.css
@@ -35,7 +35,8 @@ h1{
 
 .box-buttons {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
     gap: 10px;
 }
 
@@ -50,4 +51,14 @@ button {
 
 button:hover {
     background-color: #e0e0e0;
+}
+
+.btn-zero{
+    grid-column: 1 / 3;
+}
+
+.btn-result{
+    grid-row: 4 / 6;
+    grid-column: 4;
+    height: 100%;
 }
